# university

./: README.md
sem2/chm/Lab1/: Lab1.sln  Lab1.vcxproj  Lab1.vcxproj.filters  main.cpp  root_finding_algorithms.cpp  root_finding_algorithms.h
sem2/chm/lab10/: differential_equation.cpp  differential_equation.h  lab10.sln  lab10.vcxproj  lab10.vcxproj.filters  main.cpp
sem2/chm/lab3/: io_funcitons.cpp  io_functions.h  lab3.sln  lab3.vcxproj  lab3.vcxproj.filters  main.cpp  solving_functions.cpp  solving_functions.h  support_functions.cpp  support_functions.h
sem2/chm/lab5/: equation_system.cpp  equation_system.h  lab5.sln  lab5.vcxproj  lab5.vcxproj.filters  main.cpp  source.txt
sem2/chm/lab6/: equation_system.cpp  equation_system.h  lab6.sln  lab6.vcxproj  lab6.vcxproj.filters  main.cpp
sem2/chm/lab7/: lab7.sln  lab7.vcxproj  lab7.vcxproj.filters  main.cpp  polynomial.cpp  polynomial.h  source.txt
sem2/chm/lab7_extra/: lab7_extra.vcxproj  main.cpp
sem2/chm/lab8/: lab8.sln  lab8.vcxproj  lab8.vcxproj.filters  main.cpp  polynomial_approximation.cpp  polynomial_approximation.h  source.txt
sem2/chm/lab9/: integral.cpp  integral.h  lab9.sln  lab9.vcxproj  lab9.vcxproj.filters  main.cpp
sem2/oop/ControlWork/: ControlWork.sln  ControlWork.vcxproj  test.cpp
sem2/oop/oop_lab10_prog/: cbitfield.cpp  cbitfield.h  ctable.h  exceptions.h  find_element_function.h  oop_lab10_prog.sln  oop_lab10_prog.vcxproj  oop_lab10_prog.vcxproj.filters
sem2/oop/oop_lab10_test/: oop_lab10_test.vcxproj  test.cpp
sem2/oop/oop_lab11_prog/: cbitfield.h  ctable.h  exceptions.h  oop_lab11_prog.sln  oop_lab11_prog.vcxproj  oop_lab11_prog.vcxproj.filters
sem2/oop/oop_lab11_test/: oop_lab11_test.vcxproj  test.cpp
sem2/oop/oop_lab1_prog/: oop_lab1_prog.sln
sem2/oop/oop_lab2_prog/: Lab2.cpp  lab2.h  oop_lab2_prog.sln  oop_lab2_prog.vcxproj  oop_lab2_prog.vcxproj.filters
sem2/oop/oop_lab2_test/: oop_lab2_test.vcxproj  test.cpp
sem2/oop/oop_lab3_prog/: CBitField.cpp  CBitField.h  oop_lab3_prog.sln  oop_lab3_prog.vcxproj
sem2/oop/oop_lab3_test/: oop_lab3_test.vcxproj  test.cpp
sem2/oop/oop_lab4_prog/: CBitField.cpp  CBitField.h  oop_lab4_prog.sln  oop_lab4_prog.vcxproj  oop_lab4_prog.vcxproj.filters
sem2/oop/oop_lab4_test/: oop_lab4_test.vcxproj  test.cpp  testSource.txt
sem2/oop/oop_lab5_prog/: CTable.cpp  CTable.h  CTable_uptr.cpp  oop_lab5_prog.sln  oop_lab5_prog.vcxproj  СTable_uptr.h  (+1 more)
sem2/oop/oop_lab6_window/: CMakeLists.txt  destination.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  source.txt
sem2/tests/: main.cpp
(+1302 files in other folders)
